--- a/css/signupstyles.css
+++ b/css/signupstyles.css
@@ -1,75 +1,3 @@
-body{
-	font-size: 16px;
-	color: #fff;
-	background-color: #6a097d;
-font-family: 'Oxygen', sans-serif;
-}
-#header-nav{
-	background-color: #f6b319;
-	border-radius:0;
-	border: 0;
-}
-.nav-brand a:hover,.navbar-brand a:focus{
-	text-decoration:none;
-}
-#logo-img{
-	 background: url('F:/subjects/web developers/restaurant/before/kitchen.png') no-repeat;
-  width: 150px;
-  height: 150px;
-  margin: 10px 15px 10px 0;
-}
-#navbar-brand p{
-	font-color: #000;
-	text-transform: uppercase;
-	font-size: .7em;
-	margin-top: 15px;
-}
-.navbar-brand h1 { /* Restaurant name */
-  font-family: serif;
-  color: #d92027;
-  font-size: 2em;
-  text-transform: uppercase;
-  font-weight: bold;
-  text-shadow: 1px 1px 1px #222;
-  margin-top: 10px;
-  margin-bottom: 0;
-  line-height: .75;
-}
-.centerof{
-display: block;
-  border: 1px solid 
-  border-radius: 4px;
-   margin-left: auto;
-  margin-right: auto;
-  padding: 5px;
-  width: 70%;
-  height:60%;
-}
-.bottom-left {
-	margin-top: 12px;
- float: center;
- padding-left: 90px;
-}
-.column1{
- {content:"";
- display:table;
- clear:both}
-}
-
-
-
-#hours {
-  width: 25%;
-  background-color: blue;
-}
-#Address {
-  width: 50%;
-  background-color: green;
-}
-#testimonials {
-  width: 25%;
-  background-color: yellow;
-}
 @import url(https://fonts.googleapis.com/css?family=Roboto:400,300,500);
 *:focus {
   outline: none;
@@ -88,9 +16,9 @@ body {
 #login-box {
   position: relative;
   margin: 5% auto;
-  width: 600px;
-  height: 400px;
-  background: #FFF;
+  width: 700px;
+  height: 680px;
+  background: #f5f5f5;
   border-radius: 2px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.4);
 }
@@ -112,7 +40,8 @@ h1 {
 }
 
 input[type="text"],
-input[type="password"] {
+input[type="password"],
+input[type="email"],input[type="datetime-local"],input[type="tel"],select[id="Purpose"] {
   display: block;
   box-sizing: border-box;
   margin-bottom: 20px;
@@ -128,16 +57,17 @@ input[type="password"] {
 }
 
 input[type="text"]:focus,
-input[type="password"]:focus {
+input[type="password"]:focus,
+input[type="email"]:focus,input[type="datetime-local"]:focus,input[type="tel"]:focus,select[id="Purpose"]:focus {
   border-bottom: 2px solid #16a085;
   color: #16a085;
   transition: 0.2s ease;
 }
 
-input[type="submit"] {
+button[type="submit"] {
   margin-top: 28px;
-  width: 120px;
-  height: 32px;
+  width: 160px;
+  height: 40px;
   background: #16a085;
   border: none;
   border-radius: 2px;
@@ -149,31 +79,20 @@ input[type="submit"] {
   cursor: pointer;
 }
 
-input[type="submit"]:hover,
-input[type="submit"]:focus {
+button[type="submit"]:hover,
+button[type="submit"]:focus {
   opacity: 0.8;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.4);
   transition: 0.1s ease;
 }
 
-input[type="submit"]:active {
+button[type="submit"]:active {
   opacity: 1;
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.4);
   transition: 0.1s ease;
 }
 
-.or {
-  position: absolute;
-  top: 180px;
-  left: 280px;
-  width: 40px;
-  height: 40px;
-  background: #DDD;
-  border-radius: 50%;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.4);
-  line-height: 40px;
-  text-align: center;
-}
+
 
 .right {
   position: absolute;
@@ -181,7 +100,7 @@ input[type="submit"]:active {
   right: 0;
   box-sizing: border-box;
   padding: 40px;
-  width: 300px;
+  width: 320px;
   height: 400px;
   background: url('https://goo.gl/YbktSj');
   background-size: cover;
@@ -196,7 +115,7 @@ input[type="submit"]:active {
   color: #FFF;
   text-align: center;
 }
-
+/*
 button.social-signin {
   margin-bottom: 20px;
   width: 220px;
@@ -223,24 +142,3 @@ button.social-signin:active {
 
 
 
-.hero {
-  position: relative;
-  width: 100%;
-  padding: 2em 0;
-  overflow: hidden; // Hide overflow to contain the background
-}
-  .hero__background {
-    position: absolute;
-    top: -50%;
-    left: 0;
-    width: 200%;
-    // Where the magic happens
-    -webkit-filter: blur(100px);
-    -webkit-transform: translate3d(0, 0, 0);
-  }
-  .hero__title {
-    position: relative;
-    text-align: center;
-    font-size: 5em;
-    color: white;
-  }
