--- a/css/signupstyles.css
+++ b/css/signupstyles.css
@@ -17,7 +17,7 @@ body {
   position: relative;
   margin: 5% auto;
   width: 700px;
-  height: 680px;
+  height:750px;
   background: #f5f5f5;
   border-radius: 2px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.4);
@@ -41,7 +41,7 @@ h1 {
 
 input[type="text"],
 input[type="password"],
-input[type="email"],input[type="datetime-local"],input[type="tel"],select[id="Purpose"] {
+input[type="email"],input[type="date"],input[type="tel"],select[id="Purpose"] {
   display: block;
   box-sizing: border-box;
   margin-bottom: 20px;
@@ -58,7 +58,7 @@ input[type="email"],input[type="datetime-local"],input[type="tel"],select[id="Pu
 
 input[type="text"]:focus,
 input[type="password"]:focus,
-input[type="email"]:focus,input[type="datetime-local"]:focus,input[type="tel"]:focus,select[id="Purpose"]:focus {
+input[type="email"]:focus,input[type="date"]:focus,input[type="tel"]:focus,select[id="Purpose"]:focus {
   border-bottom: 2px solid #16a085;
   color: #16a085;
   transition: 0.2s ease;
