--- a/css/contactus.css
+++ b/css/contactus.css
@@ -33,8 +33,8 @@ body {
 #login-box {
   position: relative;
   margin: 5% auto;
-  width: 750px;
-  height:950px;
+  width: 790px;
+  height:760px;
   background: #f5f5f5;
   border-radius: 2px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.4);
@@ -50,6 +50,17 @@ body {
   width: 100%;
   height: auto;
 }
+h2 { 
+  margin-left: 30px;
+   position: absolute; 
+   top: 380px; 
+   left: 100px; 
+   font-weight: 500;
+   box-sizing: content-box;
+  
+   
+}
+
 
 h1 {
   margin: 0 0 20px 0;
@@ -59,7 +70,7 @@ h1 {
 
 input[type="text"],
 input[type="password"],
-input[type="email"],input[type="date"],input[type="tel"],select[id="Purpose"] {
+input[type="email"] {
   display: block;
   box-sizing: border-box;
   margin-bottom: 20px;
@@ -74,9 +85,24 @@ input[type="email"],input[type="date"],input[type="tel"],select[id="Purpose"] {
   transition: 0.2s ease;
 }
 
+.message{
+  display: block;
+  box-sizing: border-box;
+  margin-bottom: 20px;
+  padding: 4px;
+  width: 220px;
+  height: 150px;
+  border: none;
+  border-bottom: 1px solid #AAA;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 400;
+  font-size: 15px;
+  transition: 0.2s ease;
+
+}
 input[type="text"]:focus,
 input[type="password"]:focus,
-input[type="email"]:focus,input[type="date"]:focus,input[type="tel"]:focus,select[id="Purpose"]:focus {
+input[type="email"]:focus, .message{
   border-bottom: 2px solid #16a085;
   color: #16a085;
   transition: 0.2s ease;
@@ -118,7 +144,7 @@ input[type="submit"]:active {
   right: 0;
   box-sizing: border-box;
   padding: 40px;
-  width: 320px;
+  width: 400px;
   height: 400px;
   background: url('https://goo.gl/YbktSj');
   background-size: cover;
@@ -160,3 +186,90 @@ input.social-signin:active {
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.4);
   transition: 0.2s ease;
 }
+
+
+/* Style all font awesome icons */
+.fa {  
+  padding: 20px;  
+  font-size: 70px;  
+  width: 50px;  
+  text-align: center;  
+  text-decoration: none;
+}
+  /* Add a hover effect if you want */
+.fa:hover {  
+  opacity: 0.7;
+}
+/* Set a specific color for each brand *//* Facebook */
+.fa-facebook {  
+  background: #3B5998;  
+  color: white;
+}
+
+/* Twitter */
+.fa-twitter {  
+  background: #55ACEE;  
+  color: white;
+} 
+
+
+/* container */
+
+#share {
+  width: 100%;
+    margin: 100px auto;
+    text-align: center;
+}
+
+/* buttons */
+
+#share a {
+  width: 50px;
+    height: 50px;
+    display: inline-block;
+    margin: 8px;
+    border-radius: 50%;
+    font-size: 24px;
+    color: #fff;
+  opacity: 0.75;
+  transition: opacity 0.15s linear;
+}
+
+#share a:hover {
+  opacity: 1;
+}
+
+/* icons */
+
+#share i {
+    position: relative;
+    top: 50%;
+    transform: translateY(-50%);
+}
+
+/* colors */
+
+.facebook {
+  background: #3b5998;
+}
+
+.twitter {
+    background: #55acee;
+}
+
+.googleplus {
+    background: #dd4b39;
+}
+
+.linkedin {
+    background: #0077b5;
+}
+
+.pinterest {
+    background: #cb2027;
+}
+
+
+
+
+
